--- a/manifest.yml
+++ b/manifest.yml
@@ -7,8 +7,5 @@ applications:
   domain: ng.bluemix.net
   path: .
   buildpack: https://github.com/zendtech/zend-server-php-buildpack.git
-<<<<<<< HEAD
-  ##https://github.com/dmikusa-pivotal/cf-php-build-pack.git
-=======
-## https://github.com/dmikusa-pivotal/cf-php-build-pack.git
->>>>>>> e6925286be83acdc95a77e3cc5897716ba076987
+## buildpack:  https://github.com/dmikusa-pivotal/cf-php-build-pack.git
+
